# basic-structures-implementations

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/includes/: linkedList.hpp  node.hpp
